Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ Examples:
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>The <code>hostname</code> library is released on the MPL 2.0 license, see file <code>LICENSE</code>
-for the complete license.</p>
+<p>The stateless-dns-go library is released on the MPL 2.0 license, see file
+<code>LICENSE</code> for the complete license.</p>
 
 <h2>
 <a id="testing" class="anchor" href="#testing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Testing</h2>
